Bug 163395 - Standard filter can no longer filter percentage values
Summary: Standard filter can no longer filter percentage values
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 t...
Keywords: bibisected, regression
Depends on:
Blocks: Data-Filter
  Show dependency treegraph
 
Reported: 2024-10-12 08:17 UTC by Gabor Kelemen (Collabora)
Modified: 2024-12-19 16:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple example file from Calc (25.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-10-12 08:17 UTC, Gabor Kelemen (Collabora)
Details
The filter and its results before the regression (118.71 KB, image/png)
2024-10-12 08:18 UTC, Gabor Kelemen (Collabora)
Details
The filter and its results after the regression (60.08 KB, image/png)
2024-10-12 08:19 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-10-12 08:17:54 UTC
Created attachment 197013 [details]
Simple example file from Calc

Attached file has some percentage values calculated by division.
When trying to apply standard filter to the column, there is no results given back except for the = 0% condition.

1. Open attached file
2. Apply standard filter on the column D with condition > 50%
-> 0 results are given
3. Change the filter condition to = 0%
-> 1 result is given, this is correct

Seems to have started with:

https://git.libreoffice.org/core/+/1f755525189884e4b2824889a6b9dea8933402db

commit 1f755525189884e4b2824889a6b9dea8933402db	[log]
author	Balazs Varga <balazs.varga991@gmail.com>	Tue May 25 18:23:16 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Mon May 31 12:15:41 2021 +0200
tree e3b8dbe7dc686e4460cb7105ace91ee2507653b2
parent 9bf1089965672d3825b587cbd888093ac362013e [diff]

tdf#142402 sc UI: store formatted values in standard filter

Symptom is similar to bug 153057 which was also bibisected to this commit. May or may not be the same problem.
Comment 1 Gabor Kelemen (Collabora) 2024-10-12 08:18:53 UTC
Created attachment 197014 [details]
The filter and its results before the regression
Comment 2 Gabor Kelemen (Collabora) 2024-10-12 08:19:28 UTC
Created attachment 197015 [details]
The filter and its results after the regression
Comment 3 m_a_riosv 2024-10-12 20:34:29 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2321626477d4ff930d8bc392efa6ea84e8825171
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Works with > 0,5 but not with > 50%
Comment 4 BogdanB 2024-10-13 04:05:29 UTC
I changed the flag as Bibisected, based on Description.
Comment 5 Commit Notification 2024-12-18 16:52:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aee655940b5a19d5f54750a8c40eded10672622f

tdf#163395 tdf#153057 - sc fix standard filter problem with formatted

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-19 10:35:27 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/1250c1e0f3b424cf18c378f3b21a14f6e531cbf7

tdf#163395 tdf#153057 - sc fix standard filter problem with formatted

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-12-19 16:17:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/89764e6a51b2c43992491a28870c69ee0e98ee9a

tdf#163395 tdf#153057 - sc fix standard filter problem with formatted

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.