tdf#163395 tdf#153057 - sc fix standard filter problem with formatted

values

ScQueryEntry::ByValue was removed unnecessarily in the original
patch, but it is necessary for filtering number values correctly.

Regression from commit: 1f755525189884e4b2824889a6b9dea8933402db

Change-Id: Ib013d971ad0b0809fc55949a6a2d9bf02418b516
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178690
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178738
(cherry picked from commit 1250c1e0f3b424cf18c378f3b21a14f6e531cbf7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178794