sc/source/ui/dbgui/filtdlg.cxx
@@ -1304,7 +1304,11 @@ IMPL_LINK( ScFilterDlg, ValModifyHdl, weld::ComboBox&, rEd, void )
     {
         rItem.maString = pDoc->GetSharedStringPool().intern(aStrVal);
         rItem.mfVal = 0.0;
-        rItem.meType = ScQueryEntry::ByString;
+
+        sal_uInt32 nIndex = 0;
+        bool bNumber = pDoc->GetFormatTable()->IsNumberFormat(
+            rItem.maString.getString(), nIndex, rItem.mfVal);
+        rItem.meType = bNumber ? ScQueryEntry::ByValue : ScQueryEntry::ByString;
     }
 
     const sal_Int32 nField = pLbField->get_active();
